deployment/manifest/graphite-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: graphite
  namespace: test-app
spec:
  selector:
    app: graphite
  ports:
    - name: ui
      protocol: TCP
      port: 80
      targetPort: 80
    - name: carbon-receiver
      protocol: TCP
      port: 2003
      targetPort: 2003
    - name: carbon-aggregator
      protocol: TCP
      port: 2023
      targetPort: 2023
    - name: statsd
      protocol: UDP
      port: 8125
      targetPort: 8125
    - name: statsd-admin
      protocol: TCP
      port: 8126
      targetPort: 8126
