deployment/manifest/graphite-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: graphite-ingress
  namespace: test-app
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: graphite
            port:
              number: 80
